Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75607

QtQml/private/qqmldelegatemodel_p.h: No such file or directory

    XMLWordPrintable

Details

    • All
    • 0cf1f9e5cfaf3fdab8f7dcf1d07bb67bda66020c

    Description

      https://codereview.qt-project.org/#/c/258978/ Update submodules on 'dev' in qt5 - PS17

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1556903847

      https://testresults.qt.io/coin/api/results/qt/qtlocation/571eebabfccf1cc6e0774682b6e2ef608983b521/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-2655e1BuildExamples_DeveloperBuild_Documentation_OutOfSourceBuild_QtLibInfix_QtNamespace/71145bd0833014221e8b58ce907cf1a8260448b3/build_1556904927/log.txt.gz

      agent:2019/05/03 18:19:18 build.go:197: In file included from ../../include/QtLocation/5.14.0/QtLocation/private/qdeclarativegeomapitemview_p.h:1,
      agent:2019/05/03 18:19:18 build.go:197:                  from ../../include/QtLocation/5.14.0/QtLocation/private/../../../../../../qt/qtlocation/src/location/declarativemaps/qdeclarativegeomap_p.h:52,
      agent:2019/05/03 18:19:18 build.go:197:                  from ../../include/QtLocation/5.14.0/QtLocation/private/qdeclarativegeomap_p.h:1,
      agent:2019/05/03 18:19:18 build.go:197:                  from /home/qt/work/qt/qtlocation/src/location/declarativemaps/qdeclarativegeomapitembase_p.h:56,
      agent:2019/05/03 18:19:18 build.go:197:                  from /home/qt/work/qt/qtlocation/src/location/maps/qgeomap.cpp:41:
      agent:2019/05/03 18:19:18 build.go:197: ../../include/QtLocation/5.14.0/QtLocation/private/../../../../../../qt/qtlocation/src/location/declarativemaps/qdeclarativegeomapitemview_p.h:59:10: fatal error: QtQml/private/qqmldelegatemodel_p.h: No such file or directory
      agent:2019/05/03 18:19:18 build.go:197:  #include <QtQml/private/qqmldelegatemodel_p.h>
      agent:2019/05/03 18:19:18 build.go:197:           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2019/05/03 18:19:18 build.go:197: compilation terminated.
      agent:2019/05/03 18:19:18 build.go:197: Makefile:19008: recipe for target '.obj/qgeomap.o' failed
      agent:2019/05/03 18:19:18 build.go:197: make[2]: *** [.obj/qgeomap.o] Error 1
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes