Fix changed import for delegate model

This is needed after 2b91e2bca3 in qtdeclarative.

Need to be adjusted to QtQmlModels/private/qqmldelegatemodel_p.h
later.

Task-number: QTBUG-75607
Change-Id: Ic6db50798edc47f6bca307be3acd1611282d2e83
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>